--- a/chart/templates/web-deployment.yaml
+++ b/chart/templates/web-deployment.yaml
@@ -24,6 +24,8 @@ spec:
               containerPort: 3000
               protocol: TCP
           env:
+            - name: STRIPE_PUBLIC_KEY
+              value: '{{ .Values.payment.stripePublicKey }}'
             - name: DATABASE_URL
               value: 'postgres://{{ .Values.postgresql.postgresqlUsername }}:{{ .Values.postgresql.postgresqlPassword }}@{{ .Release.Name }}-postgresql/{{ .Values.postgresql.postgresqlDatabase }}'
             - name: SECRET_KEY_BASE
