fix: run test_production only on master
**Why**: it is only needed on a deployment.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -176,6 +176,8 @@ test_production:
   script:
     - cd /app
     - bin/production_tests.rb
+  only:
+    - master
 
 tag_latest:
   stage: tag_latest
