--- a/chart/templates/mailer-secret.yaml
+++ b/chart/templates/mailer-secret.yaml
@@ -9,8 +9,8 @@ metadata:
 type: Opaque
 data:
   password: {{ .Values.mailer.password | b64enc | quote }}
-  smtpDomain: {{ .Values.mailer.smtp_domain | b64enc | quote }}
-  domain: {{ .Values.mailer.domain | b64enc | quote }}
-  userName: {{ .Values.mailer.user_name | b64enc | quote }}
-  port: {{ .Values.mailer.port | b64enc | quote }}
+  MAILER_SMTP_DOMAIN: {{ .Values.mailer.smtp_domain | b64enc | quote }}
+  MAILER_DOMAIN: {{ .Values.mailer.domain | b64enc | quote }}
+  MAILER_USER_NAME: {{ .Values.mailer.user_name | b64enc | quote }}
+  MAILER_PORT: {{ .Values.mailer.port | b64enc | quote }}
 {{ end }}
