--- a/chart/templates/google-secret.yaml
+++ b/chart/templates/google-secret.yaml
@@ -8,6 +8,6 @@ metadata:
     heritage: {{ .Release.Service | quote }}
 type: Opaque
 data:
-  clientId: {{ .Values.google.clientId | b64enc | quote }}
-  calenderSecret: {{ .Values.google.calenderSecret | b64enc | quote }}
+  GOOGLE_CALENDER_CLIENT_ID: {{ .Values.google.clientId | b64enc | quote }}
+  GOOGLE_CLIENT_CALENDER_SECRET: {{ .Values.google.calenderSecret | b64enc | quote }}
 {{ end }}
