fix: GOOGLE_CALENDER_WEB_HOOK was missing in the chart
Add GOOGLE_CALENDER_WEB_HOOK to the helm chart.

--- a/chart/templates/google-secret.yaml
+++ b/chart/templates/google-secret.yaml
@@ -10,4 +10,5 @@ type: Opaque
 data:
   GOOGLE_CALENDER_CLIENT_ID: {{ .Values.google.clientId | b64enc | quote }}
   GOOGLE_CALENDER_CLIENT_SECRET: {{ .Values.google.calenderSecret | b64enc | quote }}
+  GOOGLE_CALENDER_WEB_HOOK: {{ .Values.google.webHook | b64enc | quote }}
 {{ end }}
