--- a/values.yaml
+++ b/values.yaml
@@ -12,10 +12,12 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-production
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: true
-    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     nginx.ingress.kubernetes.io/configuration-snippet: |
       if ($host ~ ^(.*)cost-manager\.com$) {
+        return 301 https://$1ticktensio.com$request_uri;
+      }
+      if ($host ~ ^www.(.*)ticktensio\.com$) {
         return 301 https://$1ticktensio.com$request_uri;
       }
   tls:
