--- a/config/settings.yml
+++ b/config/settings.yml
@@ -16,7 +16,7 @@ organization_blacklist:
   - payment 
 google_calender:
   web_hook: <%= ENV["GOOGLE_CALENDER_WEB_HOOK"] %>
-  client_id: <%= ENV["GOOGLE_CALENDER_CLIENT_ID"] %>
-  client_secret: <%= ENV["GOOGLE_CALENDER_CLIENT_SECRET"] %>
+  client_id: <%= ENV["GOOGLE_CALENDER_CLIENT_ID"] || "test" %>
+  client_secret: <%= ENV["GOOGLE_CALENDER_CLIENT_SECRET"] || "test" %>
   authorization_uri: 'https://accounts.google.com/o/oauth2/auth'
   token_credential_uri: 'https://accounts.google.com/o/oauth2/token'
