feature: send emails on organization creation
**Why**: Give the user a email that he/she can use
to find the webpage again.

--- a/chart/templates/mailer-secret.yaml
+++ b/chart/templates/mailer-secret.yaml
@@ -8,7 +8,7 @@ metadata:
     heritage: {{ .Release.Service | quote }}
 type: Opaque
 data:
-  password: {{ .Values.mailer.password | b64enc | quote }}
+  MAILER_PASSWORD: {{ .Values.mailer.password | b64enc | quote }}
   MAILER_SMTP_DOMAIN: {{ .Values.mailer.smtp_domain | b64enc | quote }}
   MAILER_DOMAIN: {{ .Values.mailer.domain | b64enc | quote }}
   MAILER_USER_NAME: {{ .Values.mailer.user_name | b64enc | quote }}
