--- a/chart/templates/worker.yaml
+++ b/chart/templates/worker.yaml
@@ -20,7 +20,7 @@ spec:
         - name: web
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           command: ["/bin/sh","-c"]
-          args: ["bundle exec sidekiq"]
+          args: ["bundle exec sidekiq -C config/sidekiq.yml"]
           envFrom:
           - configMapRef:
               name: {{ .Release.Name }}-config
