--- a/values.yaml
+++ b/values.yaml
@@ -47,3 +47,14 @@ mailer:
 
 google:
   webHook: "true"
+
+headerJs: |
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127775143-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-127775143-2');
+  </script>
