fix: make google analytics work with vue.js
**Problem**: SPA

--- a/chart/templates/config.yaml
+++ b/chart/templates/config.yaml
@@ -21,5 +21,7 @@ data:
   PAYMENT_ENABLED: '{{ .Values.payment.enabled }}'
   REDIS_URL: 'redis://{{ .Release.Name }}-redis-master'
   RAILS_LOG_TO_STDOUT: 'true'
-  HEADER_JS: |
-{{ .Values.headerJs | indent 4 }}
+  HEADER_DEVISE_JS: |
+{{ .Values.deviseHeaderJs | indent 4 }}
+  HEADER_ADMINISTRATION_JS: |
+{{ .Values.administrationHeaderJs | indent 4 }}
