--- a/config/settings.yml
+++ b/config/settings.yml
@@ -20,5 +20,7 @@ google_calender:
   client_secret: <%= ENV["GOOGLE_CALENDER_CLIENT_SECRET"] || "test" %>
   authorization_uri: 'https://accounts.google.com/o/oauth2/auth'
   token_credential_uri: 'https://accounts.google.com/o/oauth2/token'
-header_js: |
-  <%= ENV["HEADER_JS"].to_s.gsub("\n", "\n  ") %>
+devise_header_js: |
+  <%= ENV["DEVISE_HEADER_JS"].to_s.gsub("\n", "\n  ") %>
+administration_header_js: |
+  <%= ENV["ADMINISTRATION_HEADER_JS"].to_s.gsub("\n", "\n  ") %>
