--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^0.21.0",
     "tui-editor": "^1.4.10",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-async-computed": "^3.8.2",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-loader": "14.2.2",
