--- a/values.yaml
+++ b/values.yaml
@@ -48,7 +48,7 @@ mailer:
 google:
   webHook: "true"
 
-headerJs: |
+deviseHeaderJs: |
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127775143-2"></script>
   <script>
@@ -57,4 +57,8 @@ headerJs: |
     gtag('js', new Date());
   
     gtag('config', 'UA-127775143-2');
+  </script>
+administrationHeaderJs:
+  <script>
+    window.googleAnalyticsId = 'UA-127775143-2'
   </script>
