--- a/chart/templates/config.yaml
+++ b/chart/templates/config.yaml
@@ -21,7 +21,7 @@ data:
   PAYMENT_ENABLED: '{{ .Values.payment.enabled }}'
   REDIS_URL: 'redis://{{ .Release.Name }}-redis-master'
   RAILS_LOG_TO_STDOUT: 'true'
-  HEADER_DEVISE_JS: |
+  DEVISE_HEADER_JS: |
 {{ .Values.deviseHeaderJs | indent 4 }}
-  HEADER_ADMINISTRATION_JS: |
+  ADMINISTRATION_HEADER_JS: |
 {{ .Values.administrationHeaderJs | indent 4 }}
