--- a/chart/templates/config.yaml
+++ b/chart/templates/config.yaml
@@ -25,3 +25,7 @@ data:
 {{ .Values.deviseHeaderJs | indent 4 }}
   ADMINISTRATION_HEADER_JS: |
 {{ .Values.administrationHeaderJs | indent 4 }}
+  RECAPTCHA_ENABLED: '{{ .Values.reCaptcha.enabled }}'
+  RECAPTCHA_SITE_KEY: '{{ .Values.reCaptcha.siteKey }}'
+  RECAPTCHA_SECRET_KEY: '{{ .Values.reCaptcha.secretKey }}'
+  RECAPTCHA_IGNORE_KEY: '{{ .Values.reCaptcha.ignoreKey }}'
