--- a/config/settings.yml
+++ b/config/settings.yml
@@ -24,3 +24,5 @@ devise_header_js: |
   <%= ENV["DEVISE_HEADER_JS"].to_s.gsub("\n", "\n  ") %>
 administration_header_js: |
   <%= ENV["ADMINISTRATION_HEADER_JS"].to_s.gsub("\n", "\n  ") %>
+recaptcha_enabled: <%= ENV["RECAPTCHA_ENABLED"] %>
+recaptcha_ignore_key: <%= ENV["RECAPTCHA_IGNORE_KEY"] %>
