--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@std/esm": "^0.19.7",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.11.0",
     "cross-env": "^5.2.1",
     "dateformat": "^3.0.3",
     "dayspan-vuetify": "^0.3.6",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "eslint-plugin-vue": "^4.7.1",
+    "jquery": "^3.5.1",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "json-api-normalizer": "^0.4.16",
