--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dayspan-vuetify": "^0.3.6",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "eslint-plugin-vue": "^4.7.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jquery-ujs": "^1.2.2",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "json-api-normalizer": "^0.4.16",
