--- a/.babelrc
+++ b/.babelrc
@@ -20,5 +20,9 @@
       "plugins": ["istanbul"]
     }
   },
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-runtime",
+    "babel-plugin-transform-async-to-generator"
+  ]
 }
