--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@sentry/browser": "^5.22.3",
     "@std/esm": "^0.19.7",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.11.0",
     "cross-env": "^5.2.1",
@@ -28,6 +30,7 @@
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.21.0",
+    "transform-runtime": "^0.0.0",
     "tui-editor": "^1.4.10",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
@@ -44,11 +47,11 @@
     "vuedraggable": "2.15.0",
     "vuetify": "1.1.1",
     "vuex": "^3.0.1",
-    "vuex-jsonapi-client": "^2.10.1",
+    "vuex-jsonapi-client": "^2.10.2",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.12",
+    "@vue/test-utils": "^1.0.3",
     "babel-core": "^6.26.0",
     "babel-plugin-istanbul": "^4.1.6",
     "bdd-lazy-var": "^2.5.4",
