fix: make chart compatible with k8s 1.16
Cause: the k8s cluster was upgraded and now it
is failing because of the use of an not supported version.

--- a/chart/templates/web-deployment.yaml
+++ b/chart/templates/web-deployment.yaml
@@ -1,11 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}-web
   labels:
-    name: {{ .Release.Name }}-web
+    app.kubernetes.io/name: {{ .Release.Name }}-web
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: {{ .Release.Name }}-web
   strategy:
     type: RollingUpdate
     rollingUpdate:
