--- a/chart/templates/worker.yaml
+++ b/chart/templates/worker.yaml
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-worker
+        app.kubernetes.io/name: {{ .Release.Name }}-worker
     spec:
       containers:
         - name: web
