--- a/docker-compose.gitlab.yml
+++ b/docker-compose.gitlab.yml
@@ -81,6 +81,7 @@ services:
     command:  sh -c "RAILS_ENV=production rails s -b '0.0.0.0'"
     volumes:
       - ./screenshots/:/app/screenshots/
+      - ./log/:/app/log/
     networks:
       default:
         aliases:
