chore: upgrade babel
Why: use newer plugins.

--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,17 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "modules": false,
       "targets": {
         "browsers": "> 1%",
         "uglify": true
-      },
-      "useBuiltIns": true
+      }
     }]
   ],
   "env": {
     "test": {
       "presets": [
-        ["env", {
+        ["@babel/preset-env", {
           "modules": false,
           "targets": { "node": "current" }
         }]
@@ -21,8 +20,8 @@
     }
   },
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-runtime",
-    "babel-plugin-transform-async-to-generator"
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-transform-async-to-generator"
   ]
 }
