--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
     "@rails/webpacker": "^3.6.0",
     "@sentry/browser": "^5.22.3",
     "@std/esm": "^0.19.7",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.11.0",
-    "cross-env": "^5.2.1",
     "dateformat": "^3.0.3",
     "dayspan-vuetify": "^0.3.6",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
@@ -19,31 +14,19 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jquery-ujs": "^1.2.2",
-    "jsdom": "^11.12.0",
-    "jsdom-global": "^3.0.2",
     "json-api-normalizer": "^0.4.16",
-    "node-sass": "^4.13.1",
-    "nyc": "^11.9.0",
     "p-queue": "^2.4.2",
-    "postcss-smart-import": "^0.7.6",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.21.0",
-    "transform-runtime": "^0.0.0",
     "tui-editor": "^1.4.10",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-async-computed": "^3.8.2",
     "vue-bootstrap-datetimepicker": "^5.0.1",
-    "vue-loader": "14.2.2",
-    "vue-resource": "^1.5.1",
+    "vue-loader": "^14.2.4",
     "vue-router": "^3.0.1",
     "vue-search-select": "^2.4.0",
     "vue-select": "^3.10.7",
     "vue-store": "^0.3.1",
     "vue-template-compiler": "^2.6.11",
-    "vue-turbolinks": "^2.1.0",
     "vuedraggable": "2.15.0",
     "vuetify": "1.1.1",
     "vuex": "^3.0.1",
@@ -51,11 +34,18 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "postcss-smart-import": "^0.7.6",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@vue/test-utils": "^1.0.3",
-    "babel-core": "^6.26.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^4.1.6",
     "bdd-lazy-var": "^2.5.4",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -64,12 +54,21 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jsdom": "^11.12.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "mocha-webpack": "^1.0.1",
+    "node-sass": "^4.13.1",
+    "nyc": "^11.9.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "regenerator-runtime": "^0.11.1",
-    "sinon": "^4.5.0",
+    "sass-loader": "^7.3.1",
+    "sinon": "^9.2.0",
     "sinon-chai": "^2.14.0",
     "sinon-stub-promise": "^4.0.0",
+    "style-loader": "^0.21.0",
     "timekeeper": "^2.2.0",
     "vue-plugin-load-script": "^1.3.0",
     "wait-until": "^0.0.2",
