chore: Remove all eslint problems from the vue files
Why: have a clear style -> do not have to think
about styling.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "test": "./scripts/test_js.sh",
     "test:watch": "./scripts/test_js.sh spec/javascript --watch",
     "report": "cross-env NODE_ENV=test nyc report",
-    "eslint": "eslint app/javascript spec"
+    "eslint": "eslint --ext .js,.vue app/javascript spec"
   },
   "nyc": {
     "exclude": [
