fix: typo calender -> calendar
Why fix: pople do not like typos.

--- a/.traceroute.yaml
+++ b/.traceroute.yaml
@@ -16,4 +16,5 @@ ignore_unused_routes:
 - user_tokens
 - /sidekiq
 - action_mailbox/inbound_emails
-
+- google_calenders#create_callback
+- google_calenders#notificatio
