--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,7 +14,7 @@ redis_url: <%= ENV["REDIS_URL"]  %>
 organization_blacklist:
   - about
   - payment 
-google_calender:
+google_calendar:
   web_hook: <%= ENV["GOOGLE_CALENDER_WEB_HOOK"] %>
   client_id: <%= ENV["GOOGLE_CALENDER_CLIENT_ID"] || "test" %>
   client_secret: <%= ENV["GOOGLE_CALENDER_CLIENT_SECRET"] || "test" %>
