--- a/chart/templates/config.yaml
+++ b/chart/templates/config.yaml
@@ -19,6 +19,7 @@ data:
   HOST: '{{ .Values.url }}'
   PAYMENT_HOST: '{{ .Values.payment.host }}'
   PAYMENT_ENABLED: '{{ .Values.payment.enabled }}'
+  STRIPE_PUBLIC_KEY: '{{ .Values.payment.stripePublicKey }}'
   REDIS_URL: 'redis://{{ .Release.Name }}-redis-master'
   RAILS_LOG_TO_STDOUT: 'true'
   DEVISE_HEADER_JS: |
