--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,6 +89,9 @@ cucumber_api:
   variables:
     GIT_STRATEGY: clone
     DOCKER_HOST: tcp://docker:2375
+    REGEX: "api.*feature" 
+    CI_NODE_INDEX: 1
+    CI_NODE_TOTAL: 1
   image:
     name: docker/compose:1.24.1
     entrypoint: ["/bin/sh", "-c"]
@@ -101,12 +104,12 @@ cucumber_api:
   services:
     - docker:dind
   script:
-    - echo "run $CI_NODE_INDEX / $CI_NODE_TOTAL"
+    - apk add curl
     - export IMAGE=$CONTAINER_RELEASE_IMAGE
     - docker-compose -f docker-compose.gitlab.yml run payment mix ecto.setup
     - docker-compose -f docker-compose.gitlab.yml run app bash -c "RAILS_ENV=production rake db:setup"
     - docker-compose -f docker-compose.gitlab.yml up -d
-    - docker-compose -f docker-compose.gitlab.yml run app cucumber features/api
+    - docker-compose -f docker-compose.gitlab.yml run -e CI_NODE_INDEX=$CI_NODE_INDEX -e CI_NODE_TOTAL=$CI_NODE_TOTAL -e REGEX=$REGEX app bin/ci_split_cucumber.sh
 
 cucumber:
   stage: test
@@ -114,6 +117,7 @@ cucumber:
   variables:
     GIT_STRATEGY: clone
     DOCKER_HOST: tcp://docker:2375
+    REGEX: "[^a][^p][^i].*feature" 
   image:
     name: docker/compose:1.24.1
     entrypoint: ["/bin/sh", "-c"]
@@ -127,12 +131,12 @@ cucumber:
   services:
     - docker:dind
   script:
-    - echo "run $CI_NODE_INDEX / $CI_NODE_TOTAL"
+    - apk add curl
     - export IMAGE=$CONTAINER_RELEASE_IMAGE
     - docker-compose -f docker-compose.gitlab.yml run payment mix ecto.setup
     - docker-compose -f docker-compose.gitlab.yml run app bash -c "RAILS_ENV=production rake db:setup"
     - docker-compose -f docker-compose.gitlab.yml up -d
-    - docker-compose -f docker-compose.gitlab.yml run -e CI_NODE_INDEX=$CI_NODE_INDEX -e CI_NODE_TOTAL=$CI_NODE_TOTAL app bin/ci_split_cucumber.sh
+    - docker-compose -f docker-compose.gitlab.yml run -e CI_NODE_INDEX=$CI_NODE_INDEX -e CI_NODE_TOTAL=$CI_NODE_TOTAL -e REGEX=$REGEX app bin/ci_split_cucumber.sh
 
 deploy:
   stage: deploy
