--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ cucumber_api:
   variables:
     GIT_STRATEGY: clone
     DOCKER_HOST: tcp://docker:2375
-    REGEX: "api.*feature" 
+    REGEX: "features/api.*feature" 
     CI_NODE_INDEX: 1
     CI_NODE_TOTAL: 1
   image:
@@ -117,7 +117,7 @@ cucumber:
   variables:
     GIT_STRATEGY: clone
     DOCKER_HOST: tcp://docker:2375
-    REGEX: "[^a][^p][^i].*feature" 
+    REGEX: "features/[^a][^p][^i].*feature" 
   image:
     name: docker/compose:1.24.1
     entrypoint: ["/bin/sh", "-c"]
